--- a/app/src/main/res/layout/productpage.xml
+++ b/app/src/main/res/layout/productpage.xml
@@ -13,33 +13,33 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#f4efe9">
+        android:background="@color/white">
 
         <!-- Toolbar with menu button and Cart -->
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#F4EFE9"
             android:layout_marginTop="30dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
                 android:id="@+id/buttonDrawerToggle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/drawer_menu"
                 android:background="@android:color/transparent"
-                android:padding="10dp"/>
+                android:padding="10dp"
+                android:src="@drawable/drawer_menu" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_gravity="left"
                 android:layout_marginLeft="30dp"
-                android:layout_gravity="left">
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/logo"
@@ -63,29 +63,29 @@
                 android:id="@+id/cart_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/cart_button_background_rounded"
-                android:padding="10dp"
+                android:layout_gravity="end"
                 android:layout_marginEnd="0dp"
-                android:layout_gravity="end">
+                android:background="@drawable/cart_button_background_rounded"
+                android:padding="10dp">
 
                 <ImageView
                     android:id="@+id/cart_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/shopping_cart_icon"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginEnd="5dp"/>
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="5dp"
+                    android:src="@drawable/shopping_cart_icon" />
 
                 <TextView
                     android:id="@+id/cart_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@id/cart_icon"
                     android:text="Cart"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:layout_toEndOf="@id/cart_icon"
-                    android:layout_centerVertical="true"/>
+                    android:textSize="16sp" />
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
@@ -94,8 +94,8 @@
             android:id="@+id/top_section"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#f4efe9"
             android:layout_marginTop="20dp"
+            android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -127,8 +127,8 @@
                         android:background="@drawable/search_view_bg"
                         android:backgroundTint="@color/lightGray"
                         android:hint="Search food here..."
-                        android:textSize="15dp"
-                        android:padding="8dp" />
+                        android:padding="8dp"
+                        android:textSize="15dp" />
 
                     <ImageButton
                         android:id="@+id/search_voice_btn"
@@ -139,16 +139,14 @@
                         android:layout_marginEnd="20dp"
                         android:background="@android:color/transparent"
                         android:src="@drawable/voice_recognition_icon" />
-
-
                 </RelativeLayout>
 
                 <ImageButton
                     android:id="@+id/filterIcon"
                     android:layout_width="52dp"
                     android:layout_height="wrap_content"
-                    android:padding="7.9dp"
                     android:background="@drawable/filter_button_design"
+                    android:padding="7.9dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -163,8 +161,8 @@
             android:id="@+id/displayfilter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
             android:layout_marginTop="10dp"
+            android:padding="16dp"
             app:layout_constraintTop_toBottomOf="@id/top_section">
 
             <TextView
@@ -172,23 +170,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="All Categories"
-                android:textSize="16sp"
                 android:textColor="@android:color/black"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/sortedByText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="sorted by category"
-                android:textSize="16sp"
-                android:textColor="@android:color/darker_gray"
                 android:layout_marginStart="8dp"
+                android:text="sorted by category"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- RecyclerView for displaying all products -->
@@ -205,8 +203,8 @@
                 android:id="@+id/allproductslayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:paddingTop="20dp"
                 android:paddingLeft="16dp"
+                android:paddingTop="20dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
@@ -216,55 +214,40 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="All Items"
-                    android:textStyle="bold"
-                    android:textSize="24sp"
                     android:textColor="@color/black"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
                     android:id="@+id/viewallbutton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="View All"
+                    android:layout_marginRight="15dp"
                     android:background="@android:color/transparent"
-                    android:textColor="@color/grey"
-                    android:textAllCaps="false"
-                    android:padding="0dp"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
-                    android:layout_marginRight="15dp"
+                    android:padding="0dp"
+                    android:text="View All"
+                    android:textAllCaps="false"
+                    android:textColor="@color/grey"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/productrecyclerView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@color/background"
+                android:background="@color/white"
                 android:padding="10dp"
-                app:layout_constraintTop_toBottomOf="@id/allproductslayout"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/chatbot_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|end"
-                    android:layout_margin="16dp"
-                    android:src="@drawable/chatbotimage"
-                    app:backgroundTint="@color/orange"
-                    app:fabSize="normal" />
-            </FrameLayout>
+                app:layout_constraintTop_toBottomOf="@id/allproductslayout" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- RecyclerView for displaying popular products -->
@@ -272,8 +255,8 @@
             android:id="@+id/clpopularproduct"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="20dp"
             android:paddingLeft="16dp"
+            android:paddingTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/clallproduct"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -283,12 +266,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Popular"
-                android:textStyle="bold"
-                android:textSize="24sp"
                 android:textColor="@color/black"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         <!-- RecyclerView for displaying order again products -->
@@ -296,8 +279,8 @@
             android:id="@+id/clorderagainproduct"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="20dp"
             android:paddingLeft="16dp"
+            android:paddingTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/clpopularproduct"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -307,28 +290,45 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Order Again"
-                android:textStyle="bold"
-                android:textSize="24sp"
                 android:textColor="@color/black"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <!-- Floating Chatbot Button -->
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!-- Floating Chatbot Button -->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/chatbot_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:src="@drawable/chatbotimage"
+            app:backgroundTint="@color/orange"
+            app:fabSize="normal" />
+    </FrameLayout>
+
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:menu="@menu/drawer_items"
-        app:dividerInsetStart="50dp"
-        app:itemIconPadding="30dp"
-        app:headerLayout="@layout/drawer_header"
         android:layout_gravity="start"
-        android:id="@+id/navigationView"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        app:dividerInsetStart="50dp"
+        app:headerLayout="@layout/drawer_header"
+        app:itemIconPadding="30dp"
+        app:menu="@menu/drawer_items" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
