--- a/app/src/main/res/layout/activity_cartpage.xml
+++ b/app/src/main/res/layout/activity_cartpage.xml
@@ -8,6 +8,8 @@
     android:background="@color/white"
     tools:context=".cartFragment">
 
+
+    <!-- LinearLayout for the cart layout -->
     <LinearLayout
         android:id="@+id/cartlayout"
         android:layout_width="match_parent"
@@ -15,30 +17,27 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center_vertical"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp">
 
-        <ImageView
-            android:id="@+id/crossicon"
-            app:srcCompat="@drawable/cross"
-            android:layout_width="30dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            android:adjustViewBounds="true"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:padding="0dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:scaleType="centerInside"/>
+        <ImageButton
+            android:id="@+id/buttonDrawerToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent"
+            android:padding="10dp"
+            android:src="@drawable/drawer_menu" />
 
         <TextView
             android:id="@+id/carttext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cart"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="30dp"
-            android:gravity="center"
+            android:layout_marginStart="16dp"
+            android:layout_gravity="center_vertical"
             android:textSize="20sp"
             android:textColor="@color/black"
             android:textStyle="bold" />
